build-logs-failed/build-lifted-base-0.2.3.12.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - lifted-base-0.2.3.12 (lib) (first run)
 - lifted-base-0.2.3.12 (test:test-lifted-base) (first run)
Configuring library for lifted-base-0.2.3.12...
Preprocessing library for lifted-base-0.2.3.12...
Building library for lifted-base-0.2.3.12...
[1 of 9] Compiling Control.Concurrent.Chan.Lifted
[2 of 9] Compiling Control.Concurrent.MVar.Lifted
[3 of 9] Compiling Control.Concurrent.QSem.Lifted
[4 of 9] Compiling Control.Concurrent.QSemN.Lifted
[5 of 9] Compiling Control.Exception.Lifted
[6 of 9] Compiling Control.Concurrent.Lifted
[7 of 9] Compiling Data.IORef.Lifted
[8 of 9] Compiling Foreign.Marshal.Utils.Lifted
[9 of 9] Compiling System.Timeout.Lifted
Configuring test suite 'test-lifted-base' for lifted-base-0.2.3.12...
Preprocessing test suite 'test-lifted-base' for lifted-base-0.2.3.12...
Building test suite 'test-lifted-base' for lifted-base-0.2.3.12...
[1 of 1] Compiling Main

test/test.hs:16:1: error:
    Could not find module ‘Control.Monad.Trans.List’
    Perhaps you meant
      Control.Monad.Trans.Cont (needs flag -package-id rerebase-1.20.2)
      Control.Monad.Trans.Cont (from transformers-0.6.1.0)
      Control.Monad.Trans.RWS (needs flag -package-id rerebase-1.20.2)
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
16 | import Control.Monad.Trans.List
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: [Cabal-7125]
Failed to build test:test-lifted-base from lifted-base-0.2.3.12.

